RequestR
========

Note: For any bug or feature request please add a new issue on GitHub: https://github.com/lastunicorn/RequestR/issues/new/choose

ver 2.0.0
---------
- [feature] Renamed the IRequestHandler interfaces to IUseCase.
- [feature] Removed the synchronous use case interfaces. Only async ones remain.
- [bug-fix] Fixed the execution of requests when use case has response but is not needed.

ver 1.1.0
---------
- [bug-fix] Async request handler was not found when called synchronously.

ver 1.0.0
---------
First release